--- a/src/google/res/values-pl/strings-profile.xml
+++ b/src/google/res/values-pl/strings-profile.xml
@@ -223,8 +223,7 @@
     <string name="form_habits_restaurants_3">Twoje ulubione restauracje</string>
     <string name="form_detail_about_dating_0">O pierwszej randce z dziewczyną</string>
     <string name="form_detail_about_dating_1">O idealnej pierwszej randce</string>
-    <string name="form_detail_about_dating_2">Jaką będzie Twoja pierwsza randka z dziewczyną?
-    </string>
+    <string name="form_detail_about_dating_2">Jaką będzie Twoja pierwsza randka z dziewczyną?</string>
     <string name="form_detail_about_dating_3">Opisz idealną randkę</string>
     <string name="form_detail_archievements_0">Najlepsze osiągnięcia w życiu</string>
     <string name="form_detail_archievements_1">Najlepsze osiągnięcia w życiu</string>
