--- a/src/google/res/values-sv/strings-profile.xml
+++ b/src/google/res/values-sv/strings-profile.xml
@@ -55,8 +55,7 @@
     <string name="profile_form_alcohol_female_1">Har slutat</string>
     <string name="profile_form_alcohol_female_2">Varför inte ibland?</string>
     <string name="profile_form_alcohol_female_3">Slutar snart</string>
-    <string name="profile_form_alcohol_female_4">Jag har alltid druckit och tänker inte sluta
-    </string>
+    <string name="profile_form_alcohol_female_4">Jag har alltid druckit och tänker inte sluta</string>
     <string name="profile_form_fitness_male_0">Muskulös</string>
     <string name="profile_form_fitness_male_1">Atletisk</string>
     <string name="profile_form_fitness_male_2">Smal</string>
@@ -224,8 +223,7 @@
     <string name="form_habits_restaurants_3">Dina favorita restauranger</string>
     <string name="form_detail_about_dating_0">Om första dejten med en tjej</string>
     <string name="form_detail_about_dating_1">Om bästa första dejten</string>
-    <string name="form_detail_about_dating_2">Hur skall du träffas med en tjej för första gången?
-    </string>
+    <string name="form_detail_about_dating_2">Hur skall du träffas med en tjej för första gången?</string>
     <string name="form_detail_about_dating_3">Beskriv en idyllisk dejt</string>
     <string name="form_detail_archievements_0">Livets största framgångar</string>
     <string name="form_detail_archievements_1">Livets största framgångar</string>
