--- a/src/main/res/layout/layout_topface_signin.xml
+++ b/src/main/res/layout/layout_topface_signin.xml
@@ -72,7 +72,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:hint="@string/password"
-                        android:imeOptions="actionDone"
+                        android:imeOptions="actionDone|flagNoExtractUi"
                         android:paddingRight="24dp" />
 
 
