--- a/src/main/res/layout/topface_registration.xml
+++ b/src/main/res/layout/topface_registration.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:hint="@string/password"
-                    android:imeOptions="actionNext"
+                    android:imeOptions="actionNext|flagNoExtractUi"
                     android:paddingRight="24dp" />
 
 
