--- a/src/main/res/layout/complains_message_fragment.xml
+++ b/src/main/res/layout/complains_message_fragment.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        style="@style/ComplainsTitle"
+        android:id="@+id/tvReason"
+        android:layout_margin="8dp"
+        android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvReason"
-            style="@style/ComplainsTitle"
-            android:layout_margin="8dp"
-            android:textSize="18sp" />
+    <EditText
+        android:id="@+id/etDescription"
+        android:layout_below="@id/tvReason"
+        style="@style/ComplainsMessageEdit" />
 
-        <EditText
-            android:id="@+id/etDescription"
-            style="@style/ComplainsMessageEdit"
-            android:layout_below="@id/tvReason"
-            android:imeOptions="flagNoExtractUi" />
+    <com.topface.topface.ui.views.LockerView
+        android:id="@+id/complainLocker"
+        style="@style/LoadingLocker"
+        android:visibility="gone" />
 
-        <com.topface.topface.ui.views.LockerView
-            android:id="@+id/complainLocker"
-            style="@style/LoadingLocker"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
