--- a/src/main/res/layout/fragment_change_auth_data.xml
+++ b/src/main/res/layout/fragment_change_auth_data.xml
@@ -1,59 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/bg_white">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingTop="18dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/setPasswordText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="18dp">
-
-            <TextView
-                android:id="@+id/setPasswordText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/general_set_password"
-                android:textSize="16sp"
-                android:visibility="gone" />
-
-            <EditText
-                android:id="@+id/edOldPassword"
-                style="@style/SettingsAccountEditText"
-                android:gravity="left|center_vertical" />
-
-            <EditText
-                android:id="@+id/edMainField"
-                style="@style/SettingsAccountEditText"
-                android:layout_marginTop="16dp"
-                android:gravity="left|center_vertical" />
-
-            <EditText
-                android:id="@+id/edConfirmationField"
-                style="@style/SettingsAccountEditText"
-                android:layout_marginTop="16dp"
-                android:gravity="left|center_vertical" />
-
-            <Button
-                android:id="@+id/btnSave"
-                style="@style/Widget.Topface.Button.Big.Blue"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/save" />
-        </LinearLayout>
-
-        <com.topface.topface.ui.views.LockerView
-            android:id="@+id/llvLogoutLoading"
-            style="@style/LoadingLocker"
+            android:text="@string/general_set_password"
+            android:textSize="16sp"
             android:visibility="gone" />
-    </RelativeLayout>
-</ScrollView>
+
+        <EditText
+            android:id="@+id/edOldPassword"
+            style="@style/SettingsAccountEditText"
+            android:gravity="left|center_vertical" />
+
+        <EditText
+            android:id="@+id/edMainField"
+            android:layout_marginTop="16dp"
+            style="@style/SettingsAccountEditText"
+            android:gravity="left|center_vertical" />
+
+        <EditText
+            android:id="@+id/edConfirmationField"
+            android:layout_marginTop="16dp"
+            style="@style/SettingsAccountEditText"
+            android:gravity="left|center_vertical" />
+
+        <Button
+            style="@style/Widget.Topface.Button.Big.Blue"
+            android:id="@+id/btnSave"
+            android:layout_marginTop="16dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save" />
+    </LinearLayout>
+
+    <com.topface.topface.ui.views.LockerView
+        android:id="@+id/llvLogoutLoading"
+        style="@style/LoadingLocker"
+        android:visibility="gone" />
+</RelativeLayout>
