#41974: turn back appName Topface for Alcatel and Appland flavours. Add new flurry key/

--- a/src/appland/res/values/constants.xml
+++ b/src/appland/res/values/constants.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="flurry_key">69CQ5Y23T7Y6QV2S9BTB</string>
+    <string name="flurry_key">WTN93DWF2SM5KPDTJ3VH</string>
 </resources>
