--- a/src/main/res/layout/tab_indicator.xml
+++ b/src/main/res/layout/tab_indicator.xml
@@ -6,15 +6,16 @@
 
     <TextView
         android:id="@+id/tab_title"
-        android:ellipsize="end"
+        style="@style/TabIndicatorHoloStyle"
         android:layout_weight="1"
-        android:textColor="@color/tab_title_color"
-        style="@style/TabIndicatorHoloStyle"/>
+        android:ellipsize="end"
+        android:paddingTop="1dp"
+        android:textColor="@color/tab_title_color" />
 
     <TextView
         android:id="@+id/tab_counter"
-        android:paddingLeft="3dp"
+        style="@style/TabIndicatorHoloStyle"
         android:layout_weight="0"
-        android:textColor="@color/tab_counter_color"
-        style="@style/TabIndicatorHoloStyle"/>
+        android:paddingLeft="3dp"
+        android:textColor="@color/tab_counter_color" />
 </LinearLayout>
