--- a/src/main/res/layout/editor_goprofile.xml
+++ b/src/main/res/layout/editor_goprofile.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/profile_id"
         android:inputType="number"
+        android:imeOptions="flagNoExtractUi"
         android:layout_marginLeft="20dp" />
 
     <Button
