--- a/src/main/res/layout/fragment_edit_input.xml
+++ b/src/main/res/layout/fragment_edit_input.xml
@@ -34,6 +34,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="top|left"
+        android:imeOptions="flagNoExtractUi"
         android:inputType="textMultiLine"
         android:maxLines="5"
         android:minLines="1"
