--- a/src/main/res/layout/fragment_recover_pwd.xml
+++ b/src/main/res/layout/fragment_recover_pwd.xml
@@ -1,50 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/auth_bg">
-
-    <!--ImageView
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/auth_bg_spot"
-            /-->
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/auth_bg"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvRedAlert"
         style="@style/RedAlertTextView"
         android:background="@drawable/bg_alert_wrong_password"
+        android:text="@string/error_login_password"
         android:textSize="12sp"
-        android:visibility="invisible"
-        android:text="@string/error_login_password"/>
+        android:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/loLoginGroup"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <TextView
+            style="@style/AuthButtonsSmallText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@style/AuthButtonsSmallText"
-            android:text="@string/enter_email_from_registration"
             android:layout_marginBottom="16dp"
-            android:gravity="left"/>
+            android:gravity="left"
+            android:text="@string/enter_email_from_registration" />
 
         <EditText
             android:id="@+id/edEmail"
+            style="@style/EditTextAuth"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/text_input_signin"
             android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            style="@style/EditTextAuth"/>
+            android:inputType="textEmailAddress" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -53,41 +46,41 @@
 
             <ProgressBar
                 android:id="@+id/prsRecoverSending"
+                style="@style/TopFaceProgressBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:visibility="gone"
-                style="@style/TopFaceProgressBar.Small"/>
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/btnRecover"
+                style="@style/RecoveryButtonsBigText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/send_password"
-                style="@style/RecoveryButtonsBigText"
-                android:background="@drawable/btn_signin_selector"/>
+                android:background="@drawable/btn_signin_selector"
+                android:text="@string/send_password" />
         </RelativeLayout>
     </LinearLayout>
 
     <TextView
+        style="@style/AuthButtonsBigText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/AuthButtonsBigText"
-        android:text="@string/recovering_password"
-        android:layout_centerHorizontal="true"
         android:layout_above="@id/loLoginGroup"
-        android:layout_marginBottom="55dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
+        android:text="@string/recovering_password" />
 
     <TextView
         android:id="@+id/tvBackToMainAuth"
+        style="@style/AuthButtonsBigText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
-        android:text="@string/general_back"
         android:drawableLeft="@drawable/ic_back"
         android:drawablePadding="8dp"
-        style="@style/AuthButtonsBigText"
-        android:gravity="center_vertical"/>
+        android:gravity="center_vertical"
+        android:text="@string/general_back" />
 </RelativeLayout>
