--- a/src/main/res/layout/fragment_recover_pwd.xml
+++ b/src/main/res/layout/fragment_recover_pwd.xml
@@ -24,7 +24,7 @@
 
         <TextView
             style="@style/AuthButtonsSmallText"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:gravity="left"
@@ -33,14 +33,14 @@
         <EditText
             android:id="@+id/edEmail"
             style="@style/EditTextAuth"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/text_input_signin"
             android:hint="@string/email"
             android:inputType="textEmailAddress" />
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
@@ -55,7 +55,7 @@
             <Button
                 android:id="@+id/btnRecover"
                 style="@style/RecoveryButtonsBigText"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_signin_selector"
                 android:text="@string/send_password" />
