--- a/src/main/res/layout/item_edit_form_input.xml
+++ b/src/main/res/layout/item_edit_form_input.xml
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <EditText
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
