--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:clickable="true">
-
-    <ImageView
-        android:id="@+id/ic_guitar"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/tvText"
-        android:scaleType="centerInside"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_guitar" />
-
-    <TextView
-        android:id="@+id/tvText"
-        style="@style/ListItemEmptyText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        style="@style/EmptyFeedsViewGravity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="@string/buy_status_and_watch_your_fans" />
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnBuy"
-        style="@style/BigStretchedBlueButton"
-        android:layout_below="@+id/tvText"
-        android:layout_centerHorizontal="true"
-        android:text="@string/buying_vip_status" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/ic_guitar"
+            style="@style/EmptyFeedsViewImageVisibility"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_guitar" />
+
+        <TextView
+            android:id="@+id/tvText"
+            style="@style/ListItemEmptyText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:gravity="center"
+            android:text="@string/buy_status_and_watch_your_fans" />
+
+        <Button
+            android:id="@+id/btnBuy"
+            style="@style/BigStretchedBlueButton"
+            android:text="@string/buying_vip_status" />
+    </LinearLayout>
+</ScrollView>
