--- a/src/main/res/layout/layout_empty_geo.xml
+++ b/src/main/res/layout/layout_empty_geo.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        style="@style/EmptyFeedsViewGravity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageView
+            style="@style/EmptyFeedsViewImageVisibility"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="40dp"
             android:src="@drawable/background_people_close" />
 
         <TextView
@@ -24,6 +25,9 @@
             android:layout_height="wrap_content"
             android:gravity="center" />
 
-        <include layout="@layout/layout_empty_feed_controls" />
+        <include
+            layout="@layout/layout_empty_feed_controls"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
