--- a/src/main/res/layout/layout_empty_visitors.xml
+++ b/src/main/res/layout/layout_empty_visitors.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:clickable="true">
-
-    <ImageView
-        android:id="@+id/ic_guest"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/tvText"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="44dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_guest" />
-
-    <TextView
-        android:id="@+id/tvText"
-        style="@style/ListItemEmptyText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        style="@style/EmptyFeedsViewGravity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:text="@string/with_vip_find_your_visitors"
-        android:textSize="16sp" />
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnBuyVip"
-        style="@style/BigStretchedBlueButton"
-        android:layout_below="@+id/tvText"
-        android:layout_centerHorizontal="true"
-        android:text="@string/buying_vip_status" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/ic_guest"
+            style="@style/EmptyFeedsViewImageVisibility"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_guest" />
+
+        <TextView
+            android:id="@+id/tvText"
+            style="@style/ListItemEmptyText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="@string/with_vip_find_your_visitors"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btnBuyVip"
+            style="@style/BigStretchedBlueButton"
+            android:text="@string/buying_vip_status" />
+    </LinearLayout>
+</ScrollView>
