--- a/src/main/res/layout/layout_paid_likes_for_vip.xml
+++ b/src/main/res/layout/layout_paid_likes_for_vip.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fillViewport="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        style="@style/EmptyFeedsViewGravity"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
@@ -14,7 +15,8 @@
 
         <LinearLayout
             android:id="@+id/ivAvatars"
-            android:layout_width="fill_parent"
+            style="@style/EmptyFeedsViewImageVisibility"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -23,21 +25,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_one"/>
+                android:src="@drawable/likes_male_one" />
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivTwo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_two"/>
+                android:src="@drawable/likes_male_two" />
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivThree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_three"/>
+                android:src="@drawable/likes_male_three" />
 
         </LinearLayout>
 
@@ -47,8 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:gravity="center"/>
+            android:gravity="center" />
 
-        <include layout="@layout/layout_empty_feed_controls"/>
+        <include layout="@layout/layout_empty_feed_controls" />
     </LinearLayout>
 </ScrollView>
