--- a/src/main/res/layout/promo_express_messages.xml
+++ b/src/main/res/layout/promo_express_messages.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     android:background="@color/bg_white">
 
-    <RelativeLayout
+    <LinearLayout
+        style="@style/EmptyFeedsViewGravity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,6 +19,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                style="@style/EmptyFeedsViewImageVisibility"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -86,6 +89,6 @@
             android:id="@+id/ipLocker"
             style="@style/LoadingLocker"
             android:visibility="gone" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </ScrollView>
