--- a/src/ifree/res/values/constants.xml
+++ b/src/ifree/res/values/constants.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="flurry_key">S6CH7Q8HTN55F2W3ZQ6M</string>
+    // необходимо заменить на ссылку маркета интегратора, пока в качестве заглушки оставлю гугловую
+    <string name="app_update_url">market://details?id=com.topface.topface</string>
 </resources>
