--- a/src/blueStacks/res/values/constants.xml
+++ b/src/blueStacks/res/values/constants.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="flurry_key">HYRWF32DM7XW8SZ38DF7</string>
+    <string name="app_update_url">market://details?id=com.topface.spark.bst</string>
 </resources>
