--- a/src/main/res/layout/fragment_dating.xml
+++ b/src/main/res/layout/fragment_dating.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.topface.topface.ui.views.KeyboardListenerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/dating_fragment_background_color">
+    xmlns:key="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/dating_fragment_background_color"
+    key:estimatedLayoutHeight="70">
 
     <!-- Dating Album -->
     <com.topface.topface.ui.views.ImageSwitcher
         android:id="@+id/glrDatingAlbum"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_above="@+id/dating_footer" />
 
     <RelativeLayout
@@ -19,7 +21,7 @@
         android:layout_marginTop="?attr/actionBarSize">
 
         <ImageView
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:scaleType="fitXY"
@@ -34,7 +36,7 @@
             android:layout_marginTop="6dp" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical">
@@ -51,7 +53,7 @@
 
             <ViewStub
                 android:id="@+id/vfDatingButtons"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal" />
 
